# otelOtomasyonu

./: CMakeLists.txt  README.md  main.cpp
